# tracker-ivi

./: README.md  autogen.sh  build-tracker-ivi  configure.ac
data/gschemas/: org.freedesktop.Tracker.DB.gschema.xml.in  org.freedesktop.Tracker.Miner.Files.gschema.xml.in
data/ontologies/: 90-tracker.ontology  91-ivi.description  91-ivi.ontology  Makefile.am
src/libtracker-common/: tracker-enums.h
src/libtracker-data/: tracker-data-manager.c  tracker-data-update.c  tracker-db-config.c  tracker-db-config.h  tracker-db-journal.c  tracker-db-manager.c  tracker-ontologies.c
src/libtracker-extract/: tracker-xmp.c
src/libtracker-miner/: Makefile.am  tracker-file-notifier.c  tracker-miner-fs.c  tracker-miner-fs.h  tracker-miner-object.c  tracker-miner-object.h  tracker-priority-queue.c  tracker-priority-queue.h  tracker-processing-queue.c  tracker-processing-queue.h
src/tracker-extract/: 07-png-faster-ivi.rule.in  08-png-ivi.rule.in  09-gif-ivi.rule.in  09-jpeg-ivi.rule.in  09-mp3-ivi.rule.in  09-png-faster.rule.in  09-vorbis-ivi.rule.in  14-libav-ivi.rule.in  Makefile.am  tracker-extract-gif-ivi.c  tracker-extract-jpeg-ivi.c  tracker-extract-libav-ivi.c  tracker-extract-mp3-ivi.c  tracker-extract-mp3.c  tracker-extract-png-faster-ivi.c  tracker-extract-png-faster.c  tracker-extract-png-ivi.c  tracker-extract-vorbis-ivi.c
src/tracker-utils/: tracker-info.c
tests/functional-tests/: 400-extractor.py  create-expectation-from-file.py
tests/libtracker-miner/: Makefile.am  tracker-priority-queue-hinted-indexing-test.c  tracker-processing-queue-test.c
(+4 files in other folders)
